# thai-citizen-guide

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  nginx.conf  otel-collector-config.yaml  package.json  pnpm-lock.yaml  supabase-to-fastapi.skill
.github/workflows/: deploy.yml
.lovable/: plan.md
agent-proxy/: .air.toml  Dockerfile  go.mod  go.sum  main.go  util.go
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  pyproject.toml  readme.md
backend/app/: config.py  database.py  main.py  models.py
backend/app/auth/: dependencies.py  security.py
backend/app/mcp/: client.py  server.py
backend/app/models/: __init__.py  agency.py  connection_log.py  conversation.py  user.py
backend/app/routers/: agencies.py  api_key.py  auth.py  chat.py  connection_logs.py  conversations.py  dashboard.py  executive_summary.py  feedback.py  insight.py  messages.py  seed.py
backend/app/schemas/: agency.py  chat.py  conversation.py  executive_summary.py  insight.py
backend/app/utils/: __init__.py  uuid7.py
backend/migrations/models/: 0_20260320122704_init.py  10_20260331204831_update.py  11_20260418213320_add user_api_key table.py  12_20260419010529_add_api_headers.py  1_20260320123417_auth.py  2_20260324192213_agency add expected_payload.py  3_20260324211426_add user to conv, message.py  4_20260325053224_message add updated_at.py  5_20260325055707_message add response_time.py  6_20260328033357_add category to message.py  7_20260328035838_add rating nullable.py  8_20260331202454_external_session_id.py  9_20260331203527_update.py
frontend/: .dockerignore  Dockerfile  nginx.conf  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/supabase/: config.toml
lab/: .env.example  a2a.py  chat.py  main.py  package.json  pyproject.toml  rest.py
nginx/: default.conf  nginx.conf
scripts/: nginx.conf
spec/: .gitignore  SKILL.md  hello.md  readme 2.md
src/: App.tsx  index.css
src/data/: mockData.ts
src/hooks/: useAgencies.ts  useChat.ts  useConnectionLogs.ts  useConversationMessages.ts  useExecutive.ts  useInsights.ts  useRealtimeActivity.ts
src/lib/: utils.ts  (+1 more)
(+64 files in other folders)
