[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "pydantic-settings>=2.13.1",
    "tortoise-orm[asyncpg]>=1.1.6",
    "uvicorn>=0.42.0",
]
